--- a/esset/css/_principal.css
+++ b/esset/css/_principal.css
@@ -24,5 +24,11 @@
 /*General*/
 
 .header img{border: 1px solid #1a237e}
-.title-page{margin-bottom: 40px; border-bottom: 1px solid #dedede}
+.title-page{margin-bottom: 30px; border-bottom: 1px solid #dedede}
 .title-page span{font-size: 50%;}
+#header{background-image: url(../img/2.jpg);
+background-size: cover;}
+.header-id{background: rgba(0,0,0,0.8);}
+.about{text-align: justify; line-height: 32px;}
+.text-sombra{text-shadow: 3px 2px 4px #888;}
+.bold{font-weight: bold;}
